[tool.poetry]
name = "labyrinth_game"
version = "0.1.0"
description = ""
authors = ["Igor Samsonov <prinstonsam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "labyrinth_game"}
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
