[tool.poetry]
name = "labyrinth_game"
version = "0.1.0"
description = ""
authors = ["Igor Samsonov <prinstonsam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "labyrinth_game"}
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "__pycache__", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []